# py-gdetect

./: .gitignore  CHANGELOG.md  Dockerfile.test  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: api.rst  conf.py  index.rst
src/gdetect/: __init__.py  __main__.py  api.py  cli.py  consts.py  exceptions.py  log.py  stream.py
src/gdetect.egg-info/: entry_points.txt
tests/: mock.py  test_api.py  test_cli.py
